# Workspace-Manager-MCP-POP-Agent-

./: README.md
mcpWork/workspace-manager-mcp/: LICENSE  README.md  config.toml  conftest.py  pyproject.toml
mcpWork/workspace-manager-mcp/docs/: architecture.md
mcpWork/workspace-manager-mcp/examples/: quickstart.py
mcpWork/workspace-manager-mcp/src/workspace_manager/: __init__.py  config.py  exceptions.py  models.py  security.py  server.py
mcpWork/workspace-manager-mcp/src/workspace_manager/agents/: dataset_agent.py  documentation_agent.py  planner_agent.py  template_agent.py  workspace_agent.py
mcpWork/workspace-manager-mcp/src/workspace_manager/tools/: __init__.py  csv_tools.py  file_tools.py  folder_tools.py  json_tools.py  project_tools.py  search_tools.py  zip_tools.py
mcpWork/workspace-manager-mcp/src/workspace_manager/utils/: logger.py  paths.py
mcpWork/workspace-manager-mcp/tests/: test_dataset_agent.py  test_file_and_zip_tools.py  test_json_csv_tools.py  test_security.py  test_workspace_agent.py
