[project]
name = "workspace-manager-mcp"
version = "0.1.0"
description = "Secure AI workspace manager MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.0.0",
  "pydantic>=2.0.0",
  "rich>=13.0.0",
  "tomli>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
